<resources>
    <string name="app_name">6216 Group Project</string>
    <string name="member_name">KiryuK</string>
    <string name="member_title">The Dragon of Dojima</string>
    <string name="post_date">November 14, 2022</string>

    <string name="member_category">Passenger</string>
    <string name="departure_location">Kamurocho, Tokyo</string>
    <string name="destination">Isezaki ljincho, Yokohama</string>
    <string name="depart_time">6:00 AM 11/22/2022</string>
    <string name="trip_detail">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.</string>
</resources>

