<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/teal_200"
        android:layout_alignParentTop="true">
        <ImageButton
            android:layout_marginLeft="25dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="fitXY"
            android:src="@drawable/left"
            android:background="@color/teal_200"
            android:onClick="backHomeLayout"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="105dp"
            android:paddingTop="15dp"
            android:text="Message"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="58dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:padding="12dp"
            android:useDefaultMargins="true">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:paddingBottom="12dp"
                android:text="Need a ride from Kamurocho to Isezaki ljincho"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/headImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/user1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/memberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_title" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Posted"
                android:textColor="#82C3EC"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_date"
                android:textColor="#82C3EC"
                android:textSize="12dp" />

            <GridLayout
                android:id="@+id/infoTableGridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:columnCount="2"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="Category"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/catTextView"
                    android:layout_width="210dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border_input"
                    android:gravity="center"
                    android:text="@string/member_category"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="Departure Location"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/depLocationTextView"
                    android:layout_width="210dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border_input"
                    android:gravity="center"
                    android:text="@string/departure_location"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="Destination"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/destinationTextView"
                    android:layout_width="210dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border_input"
                    android:gravity="center"
                    android:text="@string/destination"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="Depart Time"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/depTimeTextView"
                    android:layout_width="210dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border_input"
                    android:gravity="center"
                    android:text="@string/depart_time"
                    android:textColor="@color/black" />

            </GridLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:paddingTop="10dp"
                android:text="Trip Detail"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contentTextView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_columnSpan="2"
                android:text="@string/trip_detail"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginLeft="125dp"
                android:backgroundTint="@drawable/button_background_color"
                android:text="Message Him"
                android:textColor="@drawable/button_text_color" />

            <!--Switch with default state as enabled-->


        </GridLayout>


    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/teal_200"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu"/>

</RelativeLayout>