<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/teal_200"
        android:layout_alignParentTop="true">
        <ImageButton
            android:layout_marginLeft="25dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="fitXY"
            android:src="@drawable/left"
            android:background="@color/teal_200"
            android:onClick="backHomeLayout"
            android:tint="@color/white"
           />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="92dp"
            android:paddingTop="12dp"
            android:textSize="18dp"
            android:text="Post Details"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="58dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:useDefaultMargins="true"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Need a ride from Kamurocho to Isezaki ljincho"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/titleTextView"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:paddingBottom="12dp"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/user1"
                android:id="@+id/headImageView"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/nameTextView"
                    android:text="Kiryu"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileTextView"
                    android:text="@string/member_title"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Posted"
                android:textSize="12dp"
                android:textColor="#82C3EC"
                />

            <TextView
                android:id="@+id/postDateTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/post_date"
                android:textSize="12dp"
                android:textColor="#82C3EC"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_columnSpan="2"
                android:columnCount="2"
                android:id="@+id/infoTableGridLayout"
                >

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:text="Category"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/border"
                    />

                <TextView
                    android:id="@+id/catTextView"
                    android:layout_width="210dp"
                    android:layout_height="35dp"
                    android:text="@string/member_category"
                    android:gravity="center"
                    android:background="@drawable/border_input"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:text="Departure Location"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/border"/>

                <TextView
                    android:id="@+id/depLocationTextView"
                    android:layout_width="210dp"
                    android:layout_height="35dp"
                    android:text="@string/departure_location"
                    android:gravity="center"
                    android:background="@drawable/border_input"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:text="Destination"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/border"
                    android:padding="0dp"/>

                <TextView
                    android:id="@+id/destinationTextView"
                    android:layout_width="210dp"
                    android:layout_height="35dp"
                    android:text="@string/destination"
                    android:gravity="center"
                    android:background="@drawable/border_input"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:text="Depart Time"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/border"
                    />

                <TextView
                    android:id="@+id/depTimeTextView"
                    android:layout_width="210dp"
                    android:layout_height="35dp"
                    android:text="@string/depart_time"
                    android:gravity="center"
                    android:background="@drawable/border_input"
                    android:textColor="@color/black"/>

            </GridLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:text="Trip Detail"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_columnSpan="2"
                android:id="@+id/contentTextView"
                android:text="@string/trip_detail"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/messageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Message Him"
                android:layout_columnSpan="2"
                android:layout_marginLeft="125dp"
                android:backgroundTint="@drawable/button_background_color"
                android:textColor="@drawable/button_text_color"
                />

            <!--Switch with default state as enabled-->


        </GridLayout>




    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/teal_200"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu" />

</RelativeLayout>